es/15.9/config/index.rst
Guía de Configuración de |Fess|
================================

Guía integral sobre la configuración de |Fess|. Cada sección está organizada por propósito.

.. toctree::
   :maxdepth: 2
   :caption: Introducción

   intro
   properties

.. toctree::
   :maxdepth: 2
   :caption: Configuración Básica

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: Configuración del Rastreador

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: Conectores de Data Store

   datastore/index

.. toctree::
   :maxdepth: 2
   :caption: Configuración de Funciones de Búsqueda

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration
   rank-fusion
   search-semantic

.. toctree::
   :maxdepth: 2
   :caption: Configuración de Seguridad

   security-role
   security-virtual-host
   ldap-integration
   multitenancy

.. toctree::
   :maxdepth: 2
   :caption: Configuración SSO

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: Configuración LLM/Modo de búsqueda IA

   llm-overview
   llm-ollama
   llm-openai
   llm-gemini
   rag-chat

.. toctree::
   :maxdepth: 2
   :caption: Scripting

   scripting-overview
   scripting-javascript
   scripting-groovy

.. toctree::
   :maxdepth: 2
   :caption: Rendimiento y Operación

   rate-limiting
   load-control

.. toctree::
   :maxdepth: 2
   :caption: Administración del Sistema

   admin-logging
   admin-log-notification
   admin-index-backup
   admin-index-export
   admin-analyzer
   admin-opensearch-dashboards
